--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Inter", sans-serif;
-  background-color: #0f172a;
+  background: linear-gradient(102.36deg, #0f172a 0%, rgba(30, 53, 107, 0.96) 100%);
 }
 .container {
   width: 95%;
@@ -19,6 +19,27 @@ nav ul li a img:hover {
   transition: all 0.3s;
 }
 
+.btn-hero {
+  padding: 8px 24px;
+  color: white;
+  background-color: #6366f1;
+  text-decoration: none;
+  border-radius: 60px;
+  font-size: 0.8rem;
+  font-weight: 500;
+  transition: all 0.7s;
+}
+.btn-hero:hover {
+  padding: 8px 24px;
+  color: white;
+  background-color: #4647a7;
+  text-decoration: none;
+  border-radius: 60px;
+  font-size: 0.8rem;
+  font-weight: 500;
+  transition: all 0.7s;
+}
+
 #hero-section .content-hero {
   padding: 120px 0;
 }
@@ -30,14 +51,14 @@ nav ul li a img:hover {
 #hero-section p {
   color: #a5a5a5;
   font-weight: 500;
-  margin-top: 16px;
+  margin: 24px 0;
 }
 #hero-section span {
   color: #64748b;
 }
 #hero-section hr {
+  background-color: #64748b;
   border: 1px solid #64748b;
-  margin-top: 8px;
 }
 #hero-section h5 {
   font-size: 1rem;
@@ -45,13 +66,9 @@ nav ul li a img:hover {
   font-weight: 500;
 }
 
-#hero-section .description {
-  margin-top: 32px;
-}
-
 #mengenal-niagahoster {
   background-color: #f5f5ff;
-  padding: 60px 0;
+  padding: 120px 0;
 }
 #mengenal-niagahoster h5 {
   color: #6366f1;
@@ -86,7 +103,7 @@ nav ul li a img:hover {
 }
 
 #fitur-pemula {
-  padding: 60px 0;
+  padding: 120px 0;
   background-color: rgb(255, 255, 255);
 }
 #fitur-pemula h5 {
@@ -121,7 +138,7 @@ nav ul li a img:hover {
 }
 
 footer {
-  padding: 60px 0;
+  padding-top: 60px;
   background-color: white;
 }
 footer p {
@@ -130,4 +147,10 @@ footer p {
 footer p span {
   color: #6366f1;
   font-weight: 600;
+}
+
+@media (max-width: 767.98px) {
+  #hero-section .description {
+    margin-top: 60px;
+  }
 }
