--- a/style.css
+++ b/style.css
@@ -39,6 +39,17 @@ nav ul li a img:hover {
   font-weight: 500;
   transition: all 0.7s;
 }
+.btn-hero:focus {
+  padding: 8px 24px;
+  color: white;
+  background-color: #4647a7;
+  text-decoration: none;
+  border-radius: 60px;
+  outline: 3px solid #dfe0f3;
+  font-size: 0.8rem;
+  font-weight: 500;
+  transition: all 0.7s;
+}
 
 #hero-section .content-hero {
   padding: 120px 0;
@@ -69,12 +80,15 @@ nav ul li a img:hover {
 #mengenal-niagahoster {
   background-color: #f5f5ff;
   padding: 120px 0;
+  position: relative;
+  z-index: -100;
 }
 #mengenal-niagahoster h5 {
   color: #6366f1;
   margin-bottom: 24px;
   font-weight: 600;
   font-size: 1rem;
+  z-index: 100;
 }
 #mengenal-niagahoster h2 {
   color: #121212;
@@ -85,7 +99,7 @@ nav ul li a img:hover {
   color: #616161;
   margin-top: 8px;
 }
-#mengenal-niagahoster img {
+#mengenal-niagahoster .img-mengenal {
   margin-top: 24px;
   border: 1px solid #e0e0e0;
   filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.12));
@@ -136,11 +150,42 @@ nav ul li a img:hover {
   font-weight: 600;
   text-decoration: none;
 }
-
-footer {
-  padding-top: 60px;
-  background-color: white;
+#freelancer-niagahoster {
+  background-color: #f5f5ff;
+  padding: 120px 0;
 }
+#freelancer-niagahoster h5 {
+  color: #6366f1;
+  margin-bottom: 24px;
+  font-weight: 600;
+  font-size: 1rem;
+}
+#freelancer-niagahoster h2 {
+  color: #121212;
+  font-size: 2rem;
+  font-weight: 600;
+}
+#freelancer-niagahoster p {
+  color: #616161;
+  margin-top: 8px;
+}
+#freelancer-niagahoster img {
+  border: 1px solid #e0e0e0;
+  filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.12));
+  border-radius: 6px;
+}
+
+#freelancer-niagahoster p span a {
+  color: #6366f1;
+  font-weight: 600;
+  text-decoration: none;
+}
+#freelancer-niagahoster p span a:hover {
+  color: #4647a7;
+  font-weight: 600;
+  text-decoration: none;
+}
+
 footer p {
   color: #616161;
 }
@@ -148,9 +193,44 @@ footer p span {
   color: #6366f1;
   font-weight: 600;
 }
+footer {
+  background-color: #ffffff;
+  padding-top: 120px;
+}
+footer h5 {
+  color: #6366f1;
+  margin-bottom: 24px;
+  font-weight: 600;
+  font-size: 1rem;
+}
+footer h2 {
+  color: #121212;
+  font-size: 2rem;
+  font-weight: 600;
+}
+footer p {
+  color: #616161;
+  margin-top: 8px;
+}
 
-@media (max-width: 767.98px) {
+footer p span a {
+  color: #6366f1;
+  font-weight: 600;
+  text-decoration: none;
+}
+footer p span a:hover {
+  color: #4647a7;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+@media (max-width: 767.97px) {
   #hero-section .description {
     margin-top: 60px;
+  }
+}
+@media (min-width: 767.98px) {
+  .container {
+    width: 75%;
   }
 }
